Revert "#ESW-182: Poorva: Append gc metric options to coursier command if flag is enabled."
Reverted this as gc or any other arguments used for debugging can be passed using extra args in AgentCommand.SpawnCommand. Removed this from main scope.
This reverts commit 951749633b5ae177fe41851aa4798f6d3982d50d.

# Conflicts:
#	esw-agent-akka/esw-agent-akka-app/src/main/scala/esw/agent/akka/app/ext/SpawnCommandExt.scala
#	esw-agent-akka/esw-agent-akka-app/src/test/scala/esw/agent/akka/app/ext/SpawnCommandExtTest.scala