@@ -1,9 +1,10 @@
 package esw.agent.akka.app.ext
 
+import java.nio.file.{Path, Paths}
+
 import akka.actor.typed.{ActorRef, ActorSystem, SpawnProtocol}
 import csw.location.api.models.{ComponentId, ComponentType}
 import csw.prefix.models.Prefix
-import esw.agent.akka.app.AgentSettings
 import esw.agent.akka.app.ext.SpawnCommandExt.SpawnCommandOps
 import esw.agent.akka.client.AgentCommand.SpawnCommand.{SpawnContainer, SpawnSequenceComponent, SpawnSequenceManager}
 import esw.agent.akka.client.models.ContainerConfig
@@ -12,7 +13,6 @@ import esw.commons.utils.config.VersionManager
 import esw.testcommons.BaseTestSuite
 import org.scalatest.prop.Tables.Table
 
-import java.nio.file.{Path, Paths}
 import scala.concurrent.{ExecutionContext, Future}
 
 class SpawnCommandExtTest extends BaseTestSuite {
@@ -68,70 +68,27 @@ class SpawnCommandExtTest extends BaseTestSuite {
       s"cs launch --channel $channel sequence-manager -- start -o $obsModeConf -l -a $agentPrefix --simulation"
     val spawnContainerCmd =
       s"cs launch ${containerConfig.orgName}::${containerConfig.deployModule}:${containerConfig.version} -r jitpack -M ${containerConfig.appName} -- --local --standalone ${containerConfig.configFilePath}"
-    val agentSettings = AgentSettings(agentPrefix, channel, versionConfPath, gcMetricsEnabled = false)
 
-    Table(
-      ("TestName", "SpawnCommand", "ExpectedCommandStr"),
-      ("SpawnSequenceComponent", spawnSeqComp, spawnSeqCompCmd),
-      ("SpawnSequenceComponent(version)", spawnSeqCompWithVersion, spawnSeqCompWithVersionCmd),
-      ("SpawnSequenceComponentSimulation", spawnSeqCompSimulation, spawnSeqCompSimulationCmd),
-      ("SpawnSequenceManager", spawnSeqMgr, spawnSeqMgrCmd),
-      ("SpawnSequenceManager(version)", spawnSeqMgrWithVersion, spawnSeqMgrWithVersionCmd),
-      ("SpawnSequenceManagerSimulation", spawnSeqMgrSimulation, spawnSeqMgrSimulationCmd),
-      ("SpawnContainer", spawnContainer, spawnContainerCmd)
-    ).foreach {
-      case (name, spawnCommand, expectedCommandStr) =>
-        name in {
-          spawnCommand.executableCommandStr(agentSettings, versionManager).futureValue should ===(
-            expectedCommandStr.split(" ").toList
-          )
-        }
+    "SpawnCommand.executableCommandStr" must {
+      Table(
+        ("TestName", "SpawnCommand", "ExpectedCommandStr"),
+        ("SpawnSequenceComponent", spawnSeqComp, spawnSeqCompCmd),
+        ("SpawnSequenceComponent(version)", spawnSeqCompWithVersion, spawnSeqCompWithVersionCmd),
+        ("SpawnSequenceComponentSimulation", spawnSeqCompSimulation, spawnSeqCompSimulationCmd),
+        ("SpawnSequenceManager", spawnSeqMgr, spawnSeqMgrCmd),
+        ("SpawnSequenceManager(version)", spawnSeqMgrWithVersion, spawnSeqMgrWithVersionCmd),
+        ("SpawnSequenceManagerSimulation", spawnSeqMgrSimulation, spawnSeqMgrSimulationCmd),
+        ("SpawnContainer", spawnContainer, spawnContainerCmd)
+      ).foreach {
+        case (name, spawnCommand, expectedCommandStr) =>
+          name in {
+            spawnCommand.executableCommandStr(channel, agentPrefix, versionManager, versionConfPath).futureValue should ===(
+              expectedCommandStr.split(" ").toList
+            )
+          }
+      }
     }
   }
-
-  "SpawnCommand.executableCommandStr" must {
-    val gcLogDirString                 = System.getProperty("user.home") + "/gc-metrics"
-    def gcLogFileName(appName: String) = gcLogDirString + "/" + appName + "_gc.txt"
-
-    val agentSettingsWithGCMetricsEnabled = AgentSettings(agentPrefix, channel, versionConfPath, gcMetricsEnabled = true)
-    val spawnSeqCompCmdWithGCMetrics =
-      s"cs launch --java-opt -Xlog:gc:file=${gcLogFileName("ocs-app")}::filecount=1 --channel $channel ocs-app:$sequencerScriptsVersion -- seqcomp -s ${prefix.subsystem} -n $compName -a $agentPrefix"
-    val spawnSeqCompWithVersionCmdWithGCMetrics =
-      s"cs launch --java-opt -Xlog:gc:file=${gcLogFileName(
-        "ocs-app"
-      )}::filecount=1 --channel $channel ocs-app:$version -- seqcomp -s ${prefix.subsystem} -n $compName -a $agentPrefix"
-    val spawnSeqCompSimulationCmdWithGCMetrics =
-      s"cs launch --java-opt -Xlog:gc:file=${gcLogFileName("ocs-app")}::filecount=1 --channel $channel ocs-app:$sequencerScriptsVersion -- seqcomp -s ${prefix.subsystem} -n $compName -a $agentPrefix --simulation"
-    val spawnSeqMgrCmdWithGCMetrics =
-      s"cs launch --java-opt -Xlog:gc:file=${gcLogFileName("sequence-manager")}::filecount=1 --channel $channel sequence-manager -- start -o $obsModeConf -l -a $agentPrefix"
-    val spawnSeqMgrWithVersionCmdWithGCMetrics =
-      s"cs launch --java-opt -Xlog:gc:file=${gcLogFileName("sequence-manager")}::filecount=1 --channel $channel sequence-manager:$version -- start -o $obsModeConf -l -a $agentPrefix"
-    val spawnSeqMgrSimulationCmdWithGCMetrics =
-      s"cs launch --java-opt -Xlog:gc:file=${gcLogFileName("sequence-manager")}::filecount=1 --channel $channel sequence-manager -- start -o $obsModeConf -l -a $agentPrefix --simulation"
-    val spawnContainerCmdWithGCMetrics =
-      s"cs launch --java-opt -Xlog:gc:file=${gcLogFileName(
-        s"${containerConfig.orgName}::${containerConfig.deployModule}"
-      )}::filecount=1 ${containerConfig.orgName}::${containerConfig.deployModule}:${containerConfig.version} -r jitpack -M ${containerConfig.appName} -- --local --standalone ${containerConfig.configFilePath}"
-
-    Table(
-      ("Command", "SpawnCommand", "ExpectedCommandStr"),
-      ("SpawnSequenceComponent", spawnSeqComp, spawnSeqCompCmdWithGCMetrics),
-      ("SpawnSequenceComponent(version)", spawnSeqCompWithVersion, spawnSeqCompWithVersionCmdWithGCMetrics),
-      ("SpawnSequenceComponentSimulation", spawnSeqCompSimulation, spawnSeqCompSimulationCmdWithGCMetrics),
-      ("SpawnSequenceManager", spawnSeqMgr, spawnSeqMgrCmdWithGCMetrics),
-      ("SpawnSequenceManager(version)", spawnSeqMgrWithVersion, spawnSeqMgrWithVersionCmdWithGCMetrics),
-      ("SpawnSequenceManagerSimulation", spawnSeqMgrSimulation, spawnSeqMgrSimulationCmdWithGCMetrics),
-      ("SpawnContainer", spawnContainer, spawnContainerCmdWithGCMetrics)
-    ).foreach {
-      case (command, spawnCommand, expectedCommandStr) =>
-        s"$command with GC options enabled" in {
-          spawnCommand.executableCommandStr(agentSettingsWithGCMetricsEnabled, versionManager).futureValue should ===(
-            expectedCommandStr.split(" ").toList
-          )
-        }
-    }
-  }
-
   override protected def afterAll(): Unit = {
     system.terminate()
     system.whenTerminated.futureValue
